dxhub-infra/network/network.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >
  The Network Stack template that deploys the network infrastructure.

Parameters:

  EnvironmentName:
    Description: An Environment Name to name the resources
    Type: String
    # Default: dxhub

  VpcCidrBlock:
    Description: Public Subnet 1a Cidr Block
    Type: String
    # Default: 10.192.0.0/16

  PublicSubnet1aCidrBlock:
    Description: Public Subnet 1a Cidr Block
    Type: String
    # Default: 10.192.10.0/24

  PublicSubnet1bCidrBlock:
    Description: Public Subnet 1b Cidr Block
    Type: String
    # Default: 10.192.20.0/24

  PublicSubnet1cCidrBlock:
    Description: Public Subnet 1c Cidr Block
    Type: String
    # Default: 10.192.30.0/24

  PrivateSubnet1aCidrBlock:
    Description: Private Subnet 1a Cidr Block
    Type: String
    # Default: 10.192.110.0/24

  PrivateSubnet1bCidrBlock:
    Description: Private Subnet 1b Cidr Block
    Type: String
    # Default: 10.192.120.0/24

  PrivateSubnet1cCidrBlock:
    Description: Private Subnet 1c Cidr Block
    Type: String
    # Default: 10.192.130.0/24

  RDSSubnet1aCidrBlock:
    Description: RDS Subnet 1a Cidr Block
    Type: String
    # Default: 10.192.210.0/24

  RDSSubnet1bCidrBlock:
    Description: RDS Subnet 1b Cidr Block
    Type: String
    # Default: 10.192.220.0/24

  RDSSubnet1cCidrBlock:
    Description: RDS Subnet 1c Cidr Block
    Type: String
    # Default: 10.192.230.0/24

Resources:

  # 1. Vpc

  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}

# 2. Internet Gateway

  igw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-igw

  PublicGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref igw

  # 3. Route Table

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-public-rt

  # 4. Public Route

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref igw

  # 5. Public Subnet Associations

  PublicSubnet1aAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1a

  PublicSubnet1bAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1b

  PublicSubnet1cAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1c

  RDSSubnet1aAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref RDSSubnet1a

  RDSSubnet1bAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref RDSSubnet1b

  RDSSubnet1cAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref RDSSubnet1c

  # 6. Public Subnets

  PublicSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref AWS::Region
      VpcId: !Ref Vpc
      CidrBlock: !Ref PublicSubnet1aCidrBlock
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-public-1a

  PublicSubnet1b:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref AWS::Region
      VpcId: !Ref Vpc
      CidrBlock: !Ref PublicSubnet1bCidrBlock
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-public-1b

  PublicSubnet1c:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 2
        - Fn::GetAZs: !Ref AWS::Region
      VpcId: !Ref Vpc
      CidrBlock: !Ref PublicSubnet1cCidrBlock
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-public-1c

  # 7. RDS Subnet

  RDSSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true 
      AvailabilityZone: !Select 
        - 0
        - Fn::GetAZs: !Ref AWS::Region
      VpcId: !Ref Vpc
      CidrBlock: !Ref RDSSubnet1aCidrBlock
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-rds-1a

  RDSSubnet1b:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true 
      AvailabilityZone: !Select 
        - 1
        - Fn::GetAZs: !Ref AWS::Region
      VpcId: !Ref Vpc
      CidrBlock: !Ref RDSSubnet1bCidrBlock
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-rds-1b

  RDSSubnet1c:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true 
      AvailabilityZone: !Select 
        - 2
        - Fn::GetAZs: !Ref AWS::Region
      VpcId: !Ref Vpc
      CidrBlock: !Ref RDSSubnet1cCidrBlock
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-rds-1c

  # 8. Private Subnets

  PrivateSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref AWS::Region
      VpcId: !Ref Vpc
      CidrBlock: !Ref PrivateSubnet1aCidrBlock
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-1a

  PrivateSubnet1b:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref AWS::Region
      VpcId: !Ref Vpc
      CidrBlock: !Ref PrivateSubnet1bCidrBlock
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-1b

  PrivateSubnet1c:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 2
        - Fn::GetAZs: !Ref AWS::Region
      VpcId: !Ref Vpc
      CidrBlock: !Ref PrivateSubnet1cCidrBlock
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-1c

  # 9. EIP

  NatGateway1Attachment:
    Type: AWS::EC2::EIP
    DependsOn:
      - PublicGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-NatGateway-1

  # 10. NatGateway

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1Attachment.AllocationId
      ConnectivityType: public
      SubnetId: !Ref PublicSubnet1a # Required
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-nat-1

  # 11. Private Route Table

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-rt


  # 12. Private Routes

  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1


  # 13. Private Subnet Associations

  PrivateSubnet1aAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1a

  PrivateSubnet1bAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1b

  PrivateSubnet1cAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1c

Outputs:

  VpcId:
    Description: The ID of the VPC that this stack is deployed in
    Value: !Ref Vpc
    Export:
      Name: VpcId
  PublicSubnet1a:
    Description: Public subnet 1a
    Value: !Ref PublicSubnet1a
    Export:
      Name: PublicSubnet1a
  PublicSubnet1b:
    Description: Public subnet 1b
    Value: !Ref PublicSubnet1b
    Export:
      Name: PublicSubnet1b
  PublicSubnet1c:
    Description: Public subnet 1c
    Value: !Ref PublicSubnet1c
    Export:
      Name: PublicSubnet1c
  PrivateSubnet1a:
    Description: Private subnet 1a
    Value: !Ref PrivateSubnet1a
    Export:
      Name: PrivateSubnet1a
  PrivateSubnet1b:
    Description: Private subnet 1b
    Value: !Ref PrivateSubnet1b
    Export:
      Name: PrivateSubnet1b
  PrivateSubnet1c:
    Description: Private subnet 1c
    Value: !Ref PrivateSubnet1c
    Export:
      Name: PrivateSubnet1c
  PrivateRouteTable1:
    Description: Private Route Table 1
    Value: !Ref PrivateRouteTable1
    Export:
      Name: PrivateRouteTable1
  RDSSubnet1a:
    Description: RDS subnet 1a
    Value: !Ref RDSSubnet1a
    Export:
      Name: RDSSubnet1a
  RDSSubnet1b:
    Description: RDS subnet 1b
    Value: !Ref RDSSubnet1b
    Export:
      Name: RDSSubnet1b
  RDSSubnet1c:
    Description: RDS subnet 1c
    Value: !Ref RDSSubnet1c
    Export:
      Name: RDSSubnet1c
